[package]
name = "near_os"
version = "0.1.0"
authors = ["Near <nearsy.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3" # Make the buffer write volatile to avoid bad optimization
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
