[package]
name = "near_os"
version = "0.1.0"
authors = ["Near <nearsy.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3" # Make the buffer write volatile to avoid bad optimization
spin = "0.4.9"
x86_64 = "0.7.0" # Send instructions to the isa-debug-exit port
uart_16550 = "0.2.0" # Send output from kernel to host using serial port
pic8259_simple = "0.1.1" # Programmable Interrupt Controller
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Make test exitable
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",     # Direct output from serial port to host stdio
    "-display", "none"]     # Don't show qemu window while testing
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

[[test]]
name = "stack_overflow"
harness = false